# battleship

./: ARCHITECTURE.md  CHECKLIST.md  CMakeLists.txt  DEVELOPER.md  FEATURES_SUMMARY.md  InstallationLog.txt  MSYS2_GUIDE.md  PROJECT_SUMMARY.md  QUICK_SPRITE_SETUP.md  README.md  README_GUI.md  SETUP.md  SHIP_SPRITES_GUIDE.md  build.bat  build.sh  build_msys2.bat  fleet_commander  main.cpp  placement.txt  run_gui.bat  stats.txt
assets/: README.md
assets/audio/: README.txt
assets/textures/: README.txt
src/: GameGUI.cpp  GameGUI.h  GameLogic.cpp  GameLogic.h  main.cpp  main_gui.cpp
